--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,11 @@
 #title {
-    display: none;
+    margin: 0;
+    padding: 0;
+    height: auto;
+    width: 1em;
+}
+
+#title a img{
+    height: auto;
+    width: 5em;
 }
