--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,18 @@
+body{
+    padding: 0;
+    margin: 0;
+}
+
+#header {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 100vw;
+    height: 8em;
+    padding: 0;
+    margin: 0;
+}
+
 #title {
     margin: 0;
     padding: 0;
@@ -7,5 +22,11 @@
 
 #title a img{
     height: auto;
-    width: 5em;
+    width: 4.5em;
+}
+
+#bar {
+    width: 100%;
+    height: .08em;
+    background-color: #ddd;
 }
