--- a/styles/style.css
+++ b/styles/style.css
@@ -101,12 +101,13 @@ input:focus {
     display: block;
     width: 2.25em;
     padding: 0 1.5em 0 0;
+    background: #000;
 }
 
 #bar {
     width: 100%;
     height: .08em;
-    background-color: #000;
+    background-color: #ddd;
 }
 
 
