--- a/styles/style.css
+++ b/styles/style.css
@@ -1,114 +1,113 @@
-body{
-    padding: 0;
-    margin: 0;
+body {
+  padding: 0;
+  margin: 0;
 }
 
 /* here starts the header styles */
 #header {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    width: 100vw;
-    height: 8em;
-    padding: 0;
-    margin: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 100vw;
+  height: 8em;
+  padding: 0;
+  margin: 0;
 }
 
 #header_content {
-    display: flex;
-    align-items: center;
-    height: 100%;
-
-}
-#search{
-    flex-grow: 3;
-}
-#search_form{
-    width: auto;
-}
-#form{
-    display: flex;
-    height: 3em;
-    border-width: thin;
-    border-color: lightgray;
-    border-radius: 1.5em;
-    border-width: .1em;
-    border-style: solid;
-    border-color: lightgray;
-    
+  display: flex;
+  align-items: center;
+  height: 100%;
 }
 
-#form input{
-    border-style: none;
-    background-color: #ffffff;
-    border-radius: 100%;
-    padding: 1.25em;
-    flex-grow: 4;
+#search {
+  flex-grow: 3;
 }
 
-#form button{
-    background:none;
-    outline: none;
-    padding: .5em;
-    margin: 0;
-    border-style: none;
-    border-radius: 100%;
+#search_form {
+  width: auto;
 }
 
-#form button img{
-    height: 1.5em;
-    width: auto;
-    padding: .5em;
+#form {
+  display: flex;
+  height: 3em;
+  border-width: thin;
+  border-color: lightgray;
+  border-radius: 1.5em;
+  border-width: 0.1em;
+  border-style: solid;
+  border-color: lightgray;
 }
 
-#form button img:hover{
-    cursor: pointer;
+#form input {
+  border-style: none;
+  background-color: #ffffff;
+  border-radius: 100%;
+  padding: 1.25em;
+  flex-grow: 4;
+}
+
+#form button {
+  background: none;
+  outline: none;
+  padding: 0.5em;
+  margin: 0;
+  border-style: none;
+  border-radius: 100%;
+}
+
+#form button img {
+  height: 1.5em;
+  width: auto;
+  padding: 0.5em;
+}
+
+#form button img:hover {
+  cursor: pointer;
 }
 
 input:focus {
-    outline: none;
-    padding: 0;
+  outline: none;
+  padding: 0;
 }
 
 #title {
-    margin: 0;
-    padding: 0;
-    flex-grow: 1;
+  margin: 0;
+  padding: 0;
+  flex-grow: 1;
 }
 
-#title a img{
-    height: .85em;
-    width: auto;
-    display: block;
-    padding: 0 1em 0 1em;
-    margin: 0;
+#title a img {
+  height: 0.85em;
+  width: auto;
+  display: block;
+  padding: 0 1em 0 1em;
+  margin: 0;
 }
 
-#user{
-    flex-grow: 2;
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
+#user {
+  flex-grow: 2;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
 }
 
-#user_apps a img{
-    display: block;
-    width: 2em;
-    padding: .5em;
+#user_apps a img {
+  display: block;
+  width: 2em;
+  padding: 0.5em;
 }
 
-#user_account a img{
-    display: block;
-    width: 2.25em;
-    padding: 0 1.5em 0 0;
+#user_account a img {
+  display: block;
+  width: 2.25em;
+  padding: 0 1.5em 0 0;
 }
 
 #bar {
-    width: 100%;
-    height: .08em;
-    background-color: #ddd;
+  width: 100%;
+  height: 0.08em;
+  background-color: #ddd;
 }
-
-
 
 /* here ends the header styles */
