--- a/styles/style.css
+++ b/styles/style.css
@@ -51,8 +51,7 @@ a {
 
 #form input {
   border-style: none;
-  background-color: #ffffff;
-  border-radius: 100%;
+  border-radius: 1.5em;
   padding: 1.25em 0 1.25em 1.25em;
   flex-grow: 4;
 }
