--- a/styles/style.css
+++ b/styles/style.css
@@ -296,3 +296,22 @@ input:focus {
 .gle:hover .next_t {
   text-decoration: underline;
 }
+
+/* footer start */
+
+.footer {
+  background-color: rgb(226, 226, 226);
+  width: 100%;
+  height: 5em;
+  display: flex;
+  flex-direction: column;
+}
+.location {
+  flex-grow: 2;
+  border-top: solid thin rgb(179, 179, 179);
+  border-bottom: solid thin rgb(179, 179, 179);
+}
+
+.page_info {
+  flex-grow: 3;
+}
